--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-	"name": "helloworld-sample",
-	"displayName": "helloworld-sample",
-	"description": "HelloWorld example for VS Code",
+	"name": "vscode-extension-issues",
+	"displayName": "VSCode Extension Issues",
+	"description": "Reproduction Sample for VSCode Extension Issues",
 	"version": "0.0.1",
 	"publisher": "vscode-samples",
-	"repository": "https://github.com/Microsoft/vscode-extension-samples/helloworld-sample",
 	"engines": {
 		"vscode": "^1.95.1"
 	},
